Fix floating link not visible on certain elements, because they use a z-index above 10000. Now a z-index close to the maximum possible is used for the floating link.

--- a/chrome/content/css.css
+++ b/chrome/content/css.css
@@ -1,8 +1,7 @@
 #wrtranslator-translate {
     position: fixed !important;
-    z-index: 10000 !important;
+    z-index: 2147483000 !important; /* http://stackoverflow.com/questions/491052/minimum-and-maximum-value-of-z-index */
 }
-
 #wrtranslator-translate a {
     font-size: 14pt !important;
     color: blue !important;
@@ -18,3 +17,4 @@
 #wrtranslator-translate a:active {
     opacity: 0.8 !important;
 }
+
